--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+    --primary-color: #313158;
+    --secondary-color: #171729;
+    --tertiary-color: #0D0D1A;
+
+    --text-color: rgb(255, 255, 255);
+    --link-hover-color: rgb(173, 173, 173);
+}
+
 * {
     box-sizing: border-box;
 }
 
 body {
-
+    
     background: linear-gradient(180deg, #313158 , #171729 , #0D0D1A );
     background-repeat: no-repeat;
     background-size: cover;
-
+    
     font-family: "Poppins", sans-serif;
-    font-size: 20px;
+    font-size: 16px;
+    color: var(--text-color);
+}
+
+/* fim do seguimento padrão */
+
+a {
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+a:hover {
+    color: var(--link-hover-color);
+    transition: color 0.3s ease;
 }
 
 header {
@@ -23,9 +45,9 @@ header {
     height: 150px;
     
     padding: 20px;
-    
-    color: white;
 }
+
+/* começo da logo */
 
 #container-logo {
     display: flex;
@@ -34,14 +56,19 @@ header {
 
     width: 200px;
     height: 100%;
-
+    overflow: hidden;
 }
 
-#container-logo img{
-    height: auto;
-    max-height: 100%;
+#container-logo img {
     max-width: 100%;
+    max-height: 100%;
+
+    height: auto;
+    width: auto;
 }
+/* fim da logo */
+
+/* começo do nav */
 
 #container-hud {
     display: flex;
@@ -58,23 +85,13 @@ header {
 }
 
 #container-hud a {
-    text-decoration: none;
     font-weight: bold;
-
-    color: white;
 }
 
-#container-hud a:hover{
-    color: rgb(173, 173, 173);
-
-    transition: 500ms;
-}
+/* fim do nav */
 
 main {
     flex: 1;
-    
-    color: white;
-    
     padding: 20px;
 }
 
@@ -92,7 +109,22 @@ footer {
 
     height: 150px;
     width: 100%;
+}
 
-    color: white;
-    /* background-color: purple; */
+/* responsividade */
+@media (max-width: 768px) {
+    header {
+        display: flex;
+        align-items: flex-start;
+        height: auto;
+    }
+
+    #container-hud ul {
+        display: flex;
+        
+    }
+
+    #container-logo {
+        margin-bottom: 10px;
+    }
 }
