--- a/css/style.css
+++ b/css/style.css
@@ -36,11 +36,12 @@ a:hover {
     transition: color 0.3s ease;
 }
 
+
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    
     width: 100%;
     height: 150px;
     
@@ -62,7 +63,7 @@ header {
 #container-logo img {
     max-width: 100%;
     max-height: 100%;
-
+    
     height: auto;
     width: auto;
 }
@@ -74,7 +75,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    
     width: auto;
     height: 100%;
 }
@@ -99,55 +100,80 @@ main {
 
 #container-GameInfo {
     display: flex;
-
-    justify-content: space-around;
-    align-items: center;
-
+    justify-content: center;
+    
     width: 100%;
-    height: 1010px;
 
     background-size: cover;
     background-position: center;
 
-    background-color: rgb(83, 41, 41);
+    background-color: #31315871;
 }
+
+/* ================================= sessão dos jogos ================================= */
 
 #bloco1 {   
-    background-color: yellow;
-    width: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    
+    width: 30%;
     height: 800px;
 }
+
+#capaDoJogo {
+    width: 180px;
+    height: 250px;
+    border-radius: 8px;
+    border: 2px solid rgb(255, 255, 255);
+}
+
+#avaliaçãoGlobal {
+    width: 250px;
+    height: 300px;
+    border-radius: 8px;
+    border: 2px solid rgb(255, 255, 255);
+}
+/* sessão dos jogos - bloco de avaliação */
+
+
+
+/* sessão dos jogos - bloco de informações */
 
 #bloco2 {
-    background-color: rgb(21, 119, 37);
-
-    width: 800px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    
+    width: 50%;
     height: 800px;
 }
 
-/* #info-game {
-    border: 2px solid rgb(0, 255, 55);
-}
-
-#title-game {
-    font-size: 60px;
-}
-
-
-#description {
-    border: 2px solid yellow;
-}
-
-#imagem-game {
-    width: 180px;
-    height: 240px;
+#descricaoCompleta {
+    width: 700px;
+    height: 250px;
     border-radius: 8px;
-    background-color: rgb(141, 53, 53);
-} */
+    border: 2px solid rgb(255, 255, 255);
+}
+
+#descricaoCompleta h2 {
+    font-size: 70px;
+    padding: 20%;
+}
+
+#avaliacao {
+    width: 700px;
+    height: 150px;
+    border-radius: 8px;
+    border: 2px solid rgb(255, 255, 255);
+}
+
+/* sessão dos jogos - bloco de informações */
 
 
-
-/* sessão dos jogos */
+/* ================================= sessão dos jogos ================================= */
 
 footer {
     display: flex;
