--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ footer {
 #footer-content a {
     display: block;
     text-decoration: none;
+    color: #CD1F81;
     margin-bottom: 12px;
 }
 
