--- a/css/style-home.css
+++ b/css/style-home.css
@@ -43,13 +43,6 @@ body {
 
 
 
-
-
-
-
-
-
-
 /* COMECO DO MAIN */
 
 main {
@@ -57,7 +50,7 @@ main {
     padding: 32px;
 }
 
-main section{
+main section {
     padding: 50px;
 }
 
@@ -66,11 +59,64 @@ h2 {
     font-weight: bold;
     margin-bottom: 24px;
     text-align: center;
-    
+
     background: linear-gradient(to right, #6C0BA9, #FF2A6D);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+/* CAMPO DE PESQUISA */
+
+/* container geral */
+#container-pesquisa {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    align-items: center;
+}
+
+/* formulário de busca */
+#form-busca {
+    display: flex;
+    gap: 8px;
+    width: 100%;
+    max-width: 800px;
+}
+
+#form-busca input[type="search"] {
+    flex: 1;
+    padding: 10px 16px;
+    border-radius: 8px;
+    border: none;
+    font-size: 1rem;
+}
+
+/* lista de filtros */
+#filtros {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: center;
+    text-align: center;
+    gap: 12px;
+}
+
+#filtros button {
+    padding: 6px 6px;
+    border: none;
+    background-color: transparent;
+    color: #CD1F81;
+    cursor: pointer;
+    font-size: 1.1rem;
+    font-family: "Poppins", sans-serif;
+}
+
+#filtros button:hover {
+    transform: scale(1.05);
+    transition: 0.5s;
+}
+
+/* CAMPO DE PESQUISA */
 
 /* section 1 = grid e cards */
 
@@ -124,6 +170,10 @@ h2 {
 
 /* RESPONSIVIDADE */
 @media (max-width: 600px) {
+    #container-pesquisa {
+        padding: 0 16px;
+    }
+
     h2 {
         margin-left: 0;
         text-align: center;
@@ -136,9 +186,5 @@ h2 {
 
     .card-jogo {
         width: 50%;
-    }
-
-    #game4 , #game5 {
-        display: none;
     }
 }
